<resources>
    <string name="app_name">Thierry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thierry®</string>
    <string name="nav_header_subtitle">Gauthier Abel - Patrick Audriaz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Home</string>
    <string name="toolbar_title">Fribourg</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="time">00:00</string>
    <string name="temp">0 °C</string>
    <string name="wind">Wind: 0 m/s</string>
    <string name="pres">Pressure: 0 hpa</string>
    <string name="hum">Humidity: 0 %</string>
    <string name="gauthier">Gauthier Abel</string>
    <string name="patrick">Patrick Audriaz</string>
    <string name="heia">HEIA-FR</string>
    <string name="date">April 2019</string>
    <string name="kelvin">Temperature in Kelvin</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="use_kelvin">No</string>

</resources>
